RESOLVED FIXED18799
apl.aip.org menu does not work (property names should be case sensitive)
https://bugs.webkit.org/show_bug.cgi?id=18799
Summary apl.aip.org menu does not work (property names should be case sensitive)
Michael Zedler
Reported 2008-04-29 03:52:53 PDT
Hovering over the menu "General Information" on http://apl.aip.org/ should open submenus. Works in FF+Opera, fails in Safari 3.1.1 and ToT.
Attachments
reduction (587 bytes, text/html)
2008-04-29 10:33 PDT, Marcus
no flags
patch (14.69 KB, patch)
2008-05-30 09:06 PDT, Darin Adler
sullivan: review+
Marcus
Comment 1 2008-04-29 10:33:36 PDT
Created attachment 20890 [details] reduction Code snippet from the linked page: ZIndex = 5000; with (object.style) { zIndex = --ZIndex; } In WebKit the first letter of the property name inside the with-statement is not case sensitive. ZIndex is the same as zIndex. The above code sets zIndex to -1 and the menu is hidden.
David Kilzer (:ddkilzer)
Comment 2 2008-04-30 09:20:05 PDT
Confirmed with Safari 3.1.1 (5525.20) on Mac OS X 10.5.x (Leopard) and with WebKit nightly build r32698. Works on Firefox 2.0.0.x.
David Kilzer (:ddkilzer)
Comment 3 2008-04-30 09:20:33 PDT
Darin Adler
Comment 4 2008-05-21 12:31:46 PDT
The bug seems to be in JSCSSStyleDeclarationCustom.cpp in cssPropertyName. The fix is in this line: name.append(toASCIILower(propertyName.data()[i++])); If we just remove the toASCIILower, that would fix the bug.
Darin Adler
Comment 5 2008-05-30 09:06:59 PDT
Darin Adler
Comment 6 2008-06-02 10:32:24 PDT
Committed revision 34312.
Note You need to log in before you can comment on or make changes to this bug.