WebCore:

2008-06-02  Darin Adler  <darin@apple.com>

        Reviewed by John Sullivan.

        - fix https://bugs.webkit.org/show_bug.cgi?id=18799
          apl.aip.org menu does not work (property names should be case sensitive)
          <rdar://problem/5900484>

        Test: fast/dom/CSSStyleDeclaration/css-properties-case-sensitive.html

        * bindings/js/JSCSSStyleDeclarationCustom.cpp:
        (WebCore::hasCSSPropertyNamePrefix): Tweak implementation a tiny bit for
        improved performance when the first character does not match.
        (WebCore::cssPropertyName): Reject property names with a leading uppercase
        letter.

LayoutTests:

2008-06-02  Darin Adler  <darin@apple.com>

        Reviewed by John Sullivan.

        - test for https://bugs.webkit.org/show_bug.cgi?id=18799
          apl.aip.org menu does not work (property names should be case sensitive)
          <rdar://problem/5900484>

        * fast/dom/CSSStyleDeclaration: Added.

        * fast/dom/CSSStyleDeclaration/css-properties-case-sensitive-expected.txt: Added.
        * fast/dom/CSSStyleDeclaration/css-properties-case-sensitive.html: Added.
        * fast/dom/CSSStyleDeclaration/resources: Added.
        * fast/dom/CSSStyleDeclaration/resources/TEMPLATE.html: Copied from LayoutTests/fast/dom/Element/resources/TEMPLATE.html.
        * fast/dom/CSSStyleDeclaration/resources/css-properties-case-sensitive.js: Added.

        * fast/dom/CSSStyleDeclaration-empty-string-property-expected.txt: Removed.
        * fast/dom/CSSStyleDeclaration-empty-string-property.html: Removed.
        * fast/dom/CSSStyleDeclaration/empty-string-property-expected.txt: Copied from LayoutTests/fast/dom/CSSStyleDeclaration-empty-string-property-expected.txt.
        * fast/dom/CSSStyleDeclaration/empty-string-property.html: Copied from LayoutTests/fast/dom/CSSStyleDeclaration-empty-string-property.html.

        * fast/js/duplicate-param-crash.html: Allowed the make-js-test-wrappers script to update this file.
        * fast/js/duplicate-param-gc-crash.html: Ditto.
        * fast/js/resources/tostring-exception-in-property-access.js: Ditto.
        * fast/js/var-shadows-arg-crash.html: Ditto.
        * fast/js/var-shadows-arg-gc-crash.html: Ditto.



Canonical link: https://commits.webkit.org/26766@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34312 268f45cc-cd09-0410-ab3c-d52691b4dbfc