LayoutTests/fast/js/resources/tostring-exception-in-property-access.js
@@ -31,4 +31,4 @@ try {
     testPassed("PASS: Exception caught -- " + e);
 }
 shouldBe('localTest', "'Did not assign to result when subscript threw.'");
-successfullyParsed=true;
+var successfullyParsed = true;
